--- a/greenThreats/style.css
+++ b/greenThreats/style.css
@@ -1,127 +1,141 @@
-@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap");
 
-*{
-    margin: 0px;
-    font-family: 'Signika Negative', sans-serif;
-    padding: 0px;
+* {
+  margin: 0px;
+  font-family: "Signika Negative", sans-serif;
+  padding: 0px;
 }
-.navbar{
-    height:15vh;
-    background-color: #265e2e;
-    display: grid;
-    grid-template-columns: 3fr 7fr;
+.navbar {
+  height: 15vh;
+  background-color: #265e2e;
+  display: grid;
+  grid-template-columns: 3fr 7fr;
 }
-.logo img{
-    cursor: pointer;
-    height: 85%;
-    width: 10vw;
-    margin: 0.5vw;
-    margin-left: 30px;
+.navbar a {
+  text-decoration: none;
 }
-.logo{
-    height: 100%;
-    width: 30vw;
+.pointer {
+  cursor: pointer;
 }
-.navElementContainer{
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    gap: 3.2vw;
-   
-   
+.logo img {
+  cursor: pointer;
+  height: 85%;
+  width: 10vw;
+  margin: 0.5vw;
+  margin-left: 30px;
+  animation: 1s alternate slidein ease-in-out;
 }
-.navElementContainer li{
-    list-style: none;
-    font-weight: 600;
-    font-size: 1.3vw;
-    color:aliceblue;
-    cursor: pointer;
-    height: 25%;
-    transition: all 0.1s ease-in-out;
-   
+@keyframes slidein {
+  from {
+    margin-right: 100vw;
+    width: 200%;
+  }
+
+  to {
+    margin-left: 3%;
+    width: 38%;
+  }
 }
-.navElementContainer li:hover{
-    border-bottom: 3px solid rgb(255, 255, 255);
-    transform: scale(1.2);
+.logo {
+  height: 100%;
+  width: 30vw;
 }
-.home{
-    background-image: url("./assets/flat-design-sustainable-fashion-concept_52683-55452.jpg");
-    height: 85vh;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center center;
+.navElementContainer {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  gap: 3.2vw;
 }
-.row1{
-    background-image: url("./assets/logo.jpg");
-    height: 100vh;
-    width: 100%;
-    background-position: center center;
-    background-repeat: no-repeat;
+.navElementContainer li {
+  list-style: none;
+  font-weight: 600;
+  font-size: 1.3vw;
+  color: aliceblue;
+  cursor: pointer;
+  height: 25%;
+  transition: all 0.1s ease-in-out;
 }
-.footer{
-    height: 40vh;
-    background-color: #265e2e;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.navElementContainer li:hover {
+  border-bottom: 3px solid rgb(255, 255, 255);
+  transform: scale(1.2);
 }
-.Footerlogo img{
-    height: 90%;
-    width: 70%
-    ;
+.home {
+  background-image: url("./assets/flat-design-sustainable-fashion-concept_52683-55452.jpg");
+  height: 85vh;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
-.footerContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
+.row1 {
+  background-image: url("./assets/logo.jpg");
+  height: 100vh;
+  width: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
-.foot{
-    width: 80vw;
-    display: grid;
-    grid-template-columns:  1fr 1fr 1fr;
+.footer {
+  height: 45vh;
+  background-color: #265e2e;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.footerContainer p{
-    color: white;
-    font-size: 1.3vmax;
+.Footerlogo img {
+  height: 90%;
+  width: 70%;
 }
-.contactContainer{
-    
+.footerContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
 }
-.contact{
-    
-    padding: 0.5rem;
+.foot {
+  width: 80vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
-.number i{
-    font-size: 1.3rem;
-    margin-right: 0.5vw;
-    
+.footerContainer p {
+  color: white;
+  font-size: 1.3vmax;
 }
-.number{
-    font-size: 1.1rem;
-    color: white;
+.contactContainer {
 }
-.cabName{
-    font-size: 1.2rem;
-    color: white;
+.contact {
+  padding: 0.5rem;
 }
-.colabration{
-    font-size: 1.2rem;
-    color: white;
-    font-weight: 600;
-    padding: 1rem;
+.number i {
+  font-size: 1.3rem;
+  margin-right: 0.5vw;
 }
-.date{
-    color: white;
+.number {
+  font-size: 1.1rem;
+  color: white;
 }
-.icons i{
-    font-size: 1.5rem;
-    padding-top: 1rem;
-    padding-right: 0.5rem;
-    color: black;
+.cabName {
+  font-size: 1.2rem;
+  color: white;
+}
+.colabration {
+  font-size: 1.2rem;
+  color: white;
+  font-weight: 600;
+  padding: 1rem;
+}
+.date {
+  color: white;
+}
+.icons i {
+  font-size: 1.5rem;
+  padding-top: 1rem;
+  padding-right: 0.5rem;
+  color: black;
+  transition: all 0.2s ease-in-out;
+}
+.icons i:hover {
+  transform: scale(1.3);
 }
 .icons {
-    
 }
