--- a/greenThreats/recyclinh.css
+++ b/greenThreats/recyclinh.css
@@ -13,6 +13,10 @@
   position: sticky;
   top: 0px;
 }
+::-webkit-scrollbar {
+  display: none;
+}
+
 .navbar a {
   text-decoration: none;
 }
@@ -163,7 +167,7 @@
 .cenInfo {
   padding: 2rem;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 .centerName {
   font-size: 2rem;
